[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Guillaume <guillaume.peltier.pro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
ott-jax = "^0.2.3"
jax = "^0.3.4"
jaxlib = "^0.3.2"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
jupyterlab = "^3.3.2"
pyreadstat = "^1.1.4"
tqdm = "^4.63.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
